resources/services/loadbalancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
